Sun May  9 00:27:46 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_aset): fixed argument type.

Sat May  8 19:03:31 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec (config): . is no longer in $:.

Sat May  8 13:48:31 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c (rb_ary_fetch, rb_ary_splice, rb_ary_store): Improve
	  IndexError messages [ruby-core:28394]

	* hash.c (rb_hash_fetch_m): Improve KeyError message

Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
	  collected.  based on a patch masaya tarui at [ruby-dev:41213].

Sat May  8 10:03:39 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (BasicSocket#connect_address): MacOS X 10.6
	  returns "::ffff:a.b.c.d" for IPv4-mapped IPv6 address.
	  [ruby-dev:41215] patch by Tomoyuki Chikanaga.

Fri May  7 11:30:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (install-man): install mdocs directly without
	  temporary files.  [ruby-dev:41204]

Fri May  7 09:16:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/extconf.rb (get_tclConfig_dirs): glob with EXEEXT.

	* ext/tk/extconf.rb (search_tclConfig): fixed typo.

Fri May  7 06:45:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: search directories on PATH, only if containing
	  tclsh or wish command (probably right fix for [ruby-core:30010]).

Fri May  7 03:40:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpCtoV): fix to check overflow.

Thu May  6 22:19:38 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c: define FIBER_USE_NATIVE only when _WIN32_WINNT >= 0x0400
	  on Windows because Fiber APIs are supported only such building
	  (and running) environments.
	  [ruby-dev:41192]

Thu May  6 19:13:43 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_ec.rb: added test_dsa_sign_asn1_FIPS186_3. dgst is